Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71222

Warning in qcborvalue.h

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.0 RC
    • 5.12.0 Beta 2
    • Core: Other
    • None
    • Ununtu 14.04
      gcc-4.8.real (Ubuntu 4.8.4-2ubuntu1~14.04.4) 4.8.4
    • Linux/X11
    • a0907e6ac1deee086c04a8987ad76fc2c78f65ab (qt/qtbase/5.12)

      When I try to compie any Qt project, I receive the following warning:

      /home/user/projects/qt4-git/qtbase/bin/moc -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB --include /home/user/projects/qt4-git/qtbase/examples/widgets/tools/treemodelcompleter/.moc/moc_predefs.h -I/home/user/projects/qt4-git/qtbase/mkspecs/linux-g++ -I/home/user/projects/qt4-git/qtbase/examples/widgets/tools/treemodelcompleter -I/home/user/projects/qt4-git/qtbase/include -I/home/user/projects/qt4-git/qtbase/include/QtWidgets -I/home/user/projects/qt4-git/qtbase/include/QtGui -I/home/user/projects/qt4-git/qtbase/include/QtCore -I/usr/include/c++/4.8 -I/usr/include/i386-linux-gnu/c++/4.8 -I/usr/include/c++/4.8/backward -I/usr/lib/gcc/i686-linux-gnu/4.8/include -I/usr/local/include -I/usr/lib/gcc/i686-linux-gnu/4.8/include-fixed -I/usr/include/i386-linux-gnu -I/usr/include mainwindow.h -o .moc/moc_mainwindow.cpp
      g++ -c -pipe -O2 -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I../../../../include -I../../../../include/QtWidgets -I../../../../include/QtGui -I../../../../include/QtCore -I.moc -isystem /usr/include/libdrm -I../../../../mkspecs/linux-g++ -o .obj/moc_treemodelcompleter.o .moc/moc_treemodelcompleter.cpp
      g++ -c -pipe -O2 -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I../../../../include -I../../../../include/QtWidgets -I../../../../include/QtGui -I../../../../include/QtCore -I.moc -isystem /usr/include/libdrm -I../../../../mkspecs/linux-g++ -o .obj/moc_mainwindow.o .moc/moc_mainwindow.cpp
      g++ -c -pipe -O2 -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I../../../../../include -I../../../../../include/QtWidgets -I../../../../../include/QtGui -I../../../../../include/QtCore -I.moc -isystem /usr/include/libdrm -I../../../../../mkspecs/linux-g++ -o .obj/main.o main.cpp
      g++ -Wl,-O1 -fuse-ld=gold -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../../../../lib -o treemodelcompleter .obj/treemodelcompleter.o .obj/main.o .obj/mainwindow.o .obj/qrc_treemodelcompleter.o .obj/moc_treemodelcompleter.o .obj/moc_mainwindow.o   -L/home/user/projects/qt4-git/qtbase/lib -lQt5Widgets -lQt5Gui -lQt5Core -lGL -lpthread   
      make[4]: Выход из каталога `/home/user/projects/qt4-git/qtbase/examples/widgets/tools/treemodelcompleter'
      cd undo/ && ( test -e Makefile || /home/user/projects/qt4-git/qtbase/bin/qmake -o Makefile /home/user/projects/qt4-git/qtbase/examples/widgets/tools/undo/undo.pro ) && make -f Makefile 
      In file included from ../../../../../include/QtCore/qcborvalue.h:1:0,
                       from ../../../../../include/QtCore/../../src/corelib/serialization/qcborarray.h:43,
                       from ../../../../../include/QtCore/qcborarray.h:1,
                       from ../../../../../include/QtCore/QtCore:37,
                       from ../../../../../include/QtWidgets/QtWidgetsDepends:3,
                       from ../../../../../include/QtWidgets/QtWidgets:3,
                       from main.cpp:51:
      ../../../../../include/QtCore/../../src/corelib/serialization/qcborvalue.h:74:25: warning: missing initializer for member ‘QCborError::c’ [-Wmissing-field-initializers]
           QCborError error = {};
                               ^
      

       

        1. config.summary
          6 kB
          Ilya Kotov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            trialuser02 Ilya Kotov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes