Fix warning about missing initializer for a struct member

GCC 4.8 is complaining about perfectly valid (and recommended) code but
we still support it, so...

qcborvalue.h:74:25: warning: missing initializer for member ‘QCborError::c’

Fixes: QTBUG-71222
Change-Id: If7e743cf8476463880ccfffd155e8775b6b95469
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>