src/corelib/serialization/qcborvalue.h
@@ -71,7 +71,7 @@ class QCborStreamWriter;
 struct QCborParserError
 {
     qint64 offset = 0;
-    QCborError error = {};
+    QCborError error = { QCborError::NoError };
 
     QString errorString() const { return error.toString(); }
 };
